Main&Showcase tamamlandı

--- a/index.html
+++ b/index.html
@@ -63,6 +63,45 @@
                 <a class="Navigation-item" href="">Menu4</a>
             </div>
         </nav>
+
+        <main class="Main">
+            <section class="Showcase">
+                <div class="container">
+                    <h1>More details than days a year</h1>
+                    <h3>From cosy country homes to funky city flats</h3>
+
+                    <div class="Search">
+                        <form class="Search-form" action="">
+                            <div>
+                            <div>
+                            <input type="text">
+                            </div>
+                            <small>Destination, property name or addres</small>
+                            </div>
+                            <div>
+                            <div>
+                                <input type="date">
+                            </div>
+                            <small>When</small>
+                            </div>
+                            <div>
+                                <select>
+                                    <option value="">123</option>
+                                </select>
+                            </div>
+                            <div>
+                                <button type="button">
+                                    Let's get started
+                                </button>
+                            </div>
+                            <div class="asd">
+                                are you travelling for work?
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
+        </main>
     
         <script src="js/jquery-3.5.1.min.js"></script>
         <script src="js/main.js"></script>
